tests/fail/fail_molda_missing_field.kr
molda Pessoa {
    textu nomi;
    nter idadi;
}

fn inisiu() {
    Pessoa pessoa = Pessoa::{nomi: "jose"};
    mostra(pessoa.nomi);
}
